--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,3 +1,6 @@
+env_files:
+  github_token: ~/github_token
+
 # Visit https://goreleaser.com for documentation on how to customize this
 # behavior.
 before:
